--- a/src/count.css
+++ b/src/count.css
@@ -1,19 +1,20 @@
 
 
-.res{
-  color:white;
+#res{
   background-color: black;
-  font-size: 100px;
 }
-.inc{
-    color: white;
+#inc{
     background-color: green;
-    font-size: 100px;
 }
-.dec{
-    color: white;
+#dec{
     background-color: red;
-    font-size: 100px;
+}
+.bt{
+    padding: 50px;
+    color: white;
+    font-size: 70px;
+    border-radius: 50px;
+    margin: 10px;
 }
 
 .head{
@@ -24,6 +25,7 @@
     display: flex;
     gap:10px;
     justify-content: space-evenly;
+    padding: 10px;
 }
 *{
     background-color: #fcba03;
